phpipam/namespace.yaml
# namespace.yaml para o projeto phpipam
apiVersion: v1
kind: Namespace
metadata:
  name: phpipam
